# magic_memory

./: .gitignore  CHANGES.md  GUIDE.md  README.md  chat_engine.py  command_parser.py  main.py  ollama_client.py  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/commands/: agent-memory.md
examples/: 01_standalone_ollama.py  02_standalone_openai.py  03_langchain_ollama.py  04_langchain_openai.py  langchain_example.py  langchain_plan.md
memory/: archival_memory.py  context_assembler.py  conversation_store.py  core_memory.py  summary_memory.py
src/agent_memory/: __init__.py  cli.py  command_parser.py  config.py  context_assembler.py  engine.py  token_counter.py  types.py
src/agent_memory/integrations/: __init__.py  langchain.py
src/agent_memory/layers/: __init__.py  archival.py  conversation.py  core.py  summary.py
src/agent_memory/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  registry.py
src/agent_memory/storage/: __init__.py  chroma_store.py  sqlite_store.py
tests/: conftest.py
tests/unit/: test_command_parser.py  test_config.py  test_context_assembler.py  test_engine.py  test_sqlite_store.py  test_token_counter.py
tests/unit/layers/: test_archival.py  test_conversation.py  test_core.py  test_summary.py
tests/unit/providers/: test_ollama.py  test_registry.py
