[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory"
version = "0.1.0"
description = "Modular MemGPT-style memory layer for AI agents"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
cli = ["rich>=13.0.0"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=5"]

[project.scripts]
agent-memory = "cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
