[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory"
version = "0.2.0"
description = "Modular memory layer for AI agents"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
cli = ["rich>=13.0.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
langchain = ["langchain-core>=0.2.0"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=5"]

[project.scripts]
agent-memory = "agent_memory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_memory = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=agent_memory --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/agent_memory"]
omit = ["*/tests/*", "*/agent_memory/cli.py", "*/agent_memory/chat_engine.py", "*/agent_memory/integrations/*"]
